--- a/reactweb/src/main/App.css
+++ b/reactweb/src/main/App.css
@@ -4,15 +4,26 @@
 }
 
 .subtitle {
-  font-style: italic;
-  font-size: x-large;
-  color: coral;
+  font-weight: 700;
+  font-size: 2.4rem;
+  background-image:
+    url("data:image/svg+xml,%3Csvg width='2250' height='900' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3ClinearGradient id='myGradient' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0%' stop-color='hsl(33, 78%, 43%)'/%3E%3Cstop offset='100%' stop-color='hsl(32, 93%, 55%)'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg%3E%3Crect x='0' y='0' width='2255' height='899' fill='url(%23myGradient)'/%3E%3Ccircle cx='366' cy='207' r='366' fill='url(%23myGradient)'/%3E%3Ccircle cx='1777.5' cy='318.5' r='477.5' fill='url(%23myGradient)'/%3E%3Ccircle cx='1215' cy='737' r='366' fill='url(%23myGradient)'/%3E%3C/g%3E%3C/svg%3E%0A") !important;
+  background-size: 110% auto;
+  background-position: center;
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
 }
 
 .themeFontColor {
   color: coral;
+ 
 }
 
 tr {
   cursor: pointer;
+}
+.btn-custom {
+  background-image:
+  url("data:image/svg+xml,%3Csvg width='2250' height='900' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3ClinearGradient id='myGradient' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0%' stop-color='hsl(33, 78%, 43%)'/%3E%3Cstop offset='100%' stop-color='hsl(32, 93%, 55%)'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg%3E%3Crect x='0' y='0' width='2255' height='899' fill='url(%23myGradient)'/%3E%3Ccircle cx='366' cy='207' r='366' fill='url(%23myGradient)'/%3E%3Ccircle cx='1777.5' cy='318.5' r='477.5' fill='url(%23myGradient)'/%3E%3Ccircle cx='1215' cy='737' r='366' fill='url(%23myGradient)'/%3E%3C/g%3E%3C/svg%3E%0A") !important;
 }
